@@ -13,3 +13,5 @@ office365_userPrincipalName_hook.py usr/share/pyshared/univention/admin/hooks.d/
 umc/icons/office365.png var/www
 print_subscriptions usr/share/univention-office365/scripts/
 print_users_and_groups usr/share/univention-office365/scripts/
+create_new_tenant usr/share/univention-office365/scripts/
+migrate_to_multi_tenant usr/share/univention-office365/scripts/
